--- a/client/main.html
+++ b/client/main.html
@@ -1,8 +1,6 @@
 <head>
 
-  <title>Swap My Style</title>
-  <!--Import Google Icon Font-->
-  <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <title>Swap Your Style</title>
   <!--Let browser know website is optimized for mobile-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
