--- a/imports/ui/blocks/header.html
+++ b/imports/ui/blocks/header.html
@@ -1,35 +1,38 @@
 <template name="header">
-  <nav>
-    <div class="nav-wrapper">
-      <a href="#!" class="brand-logo">&nbsp;( S ) Swap My Style</a>
-      <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
-      <ul class="right hide-on-med-and-down">
-        <li><a href="sass.html">Homme</a></li>
-        <li><a href="badges.html">Femme</a></li>
-        <li><a href="collapsible.html">Blog</a></li>
-        <li><a href="mobile.html">Créer ma garde robe</a></li>
-        <li><a class="waves-effect waves-light btn">Connexion</a></li>
-      </ul>
-      <ul class="side-nav" id="mobile-demo">
-        <a class="waves-effect waves-light btn">Connexion</a>
-        <li><a href="sass.html">Sass</a></li>
-        <li><a href="badges.html">Components</a></li>
-        <li><a href="collapsible.html">Javascript</a></li>
-        <li><a href="mobile.html">Mobile</a></li>
-      </ul>
-    </div>
-  </nav>
+	<!-- Always shows a header, even in smaller screens. -->
+	<div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
+		<header class="mdl-layout__header">
+			<div class="mdl-layout__header-row">
+				<!-- Title -->
+				<span class="mdl-layout-title">{{title}}</span>
+				<!-- Add spacer, to align navigation to the right -->
+				<div class="mdl-layout-spacer"></div>
+				<!-- Navigation. We hide it in small screens. -->
+				<nav class="mdl-navigation mdl-layout--large-screen-only">
+					{{> links}}
+					{{> connect}}
+				</nav>
+			</div>
+		</header>
+		<div class="mdl-layout__drawer">
+			<span class="mdl-layout-title">{{title}}</span>
+			<nav class="mdl-navigation">
+				{{> connect}}
+				{{> links}}
+			</nav>
+		</div>
+	</div>
+</template>
 
-    <div class="fixed-action-btn horizontal click-to-toggle" style="bottom: 24px; right: 24px;">
-    <a class="btn-floating btn-large red">
-      <i class="material-icons">menu</i>
-    </a>
-    <ul>
-      <li><a class="btn-floating red"><i class="material-icons">insert_chart</i></a></li>
-      <li><a class="btn-floating yellow darken-1"><i class="material-icons">format_quote</i></a></li>
-      <li><a class="btn-floating green"><i class="material-icons">publish</i></a></li>
-      <li><a class="btn-floating blue"><i class="material-icons">attach_file</i></a></li>
-    </ul>
-  </div>
+<template name="links">
+	<a class="mdl-navigation__link" href="#">Femme</a>
+	<a class="mdl-navigation__link" href="#">Homme</a>
+	<a class="mdl-navigation__link" href="#">Blog</a>
+	<a class="mdl-navigation__link" href="#">Créer ma garde robe</a>
+</template>
 
+<template name="connect">
+	<button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
+  	Connexion
+	</button>
 </template>
