--- a/imports/ui/body.html
+++ b/imports/ui/body.html
@@ -1,6 +1,13 @@
 <body>
   <div class="main-page">
     <header>{{> header}}</header>
+
+    <main class="mdl-layout__content">
+      <div class="page-content"><!-- Your content goes here -->
+        <!-- Wide card with share menu button -->
+        {{> card}}
+      </div>
+    </main>
 <!--     <header>
       <h1>Swap My Style</h1>
 
