--- a/imports/ui/blocks/card.html
+++ b/imports/ui/blocks/card.html
@@ -1,21 +1,18 @@
 <template name="card">
-  <div class="demo-card-wide mdl-card mdl-shadow--2dp">
-    <div class="mdl-card__title">
-      <h2 class="mdl-card__title-text">Welcome</h2>
-    </div>
-    <div class="mdl-card__supporting-text">
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-      Mauris sagittis pellentesque lacus eleifend lacinia...
-    </div>
-    <div class="mdl-card__actions mdl-card--border">
-      <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
-        Get Started
-      </a>
-    </div>
-    <div class="mdl-card__menu">
-      <button class="mdl-button mdl-button--icon mdl-js-button mdl-js-ripple-effect">
-        <i class="material-icons">share</i>
-      </button>
-    </div>
-  </div>
+
+			<div class="demo-card-square mdl-card mdl-shadow--2dp">
+				<div class="mdl-card__title mdl-card--expand">
+					<h2 class="mdl-card__title-text">Location de vêtements du futur.</h2>
+				</div>
+				<div class="mdl-card__supporting-text">
+					Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+					Aenan convallis. C'est-à-dire : Il n'existe personne qui aime la souffrance pour elle-même, ni qui la recherche ni qui la veuille pour ce qu'elle est. #emo
+				</div>
+				<div class="mdl-card__actions mdl-card--border">
+					<a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
+						Louer
+					</a>
+				</div>
+			</div>
+
 </template>
