--- a/imports/ui/blocks/footer.html
+++ b/imports/ui/blocks/footer.html
@@ -1,5 +1,11 @@
 <template name="footer">
-	<div class="infos">
-		<p>This is the footer</p>
-	</div>
+	<footer class="mdl-mini-footer">
+	  <div class="mdl-mini-footer__left-section">
+	    <div class="mdl-logo">Title</div>
+	    <ul class="mdl-mini-footer__link-list">
+	      <li><a href="#">Help</a></li>
+	      <li><a href="#">Privacy & Terms</a></li>
+	    </ul>
+	  </div>
+	</footer>
 </template>
