--- a/client/main.html
+++ b/client/main.html
@@ -3,5 +3,6 @@
   <title>Swap Your Style</title>
   <!--Let browser know website is optimized for mobile-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-
+  <link rel="stylesheet" type="text/css"
+          href="https://fonts.googleapis.com/css?family=Robto">
 </head>
