--- a/imports/ui/body.html
+++ b/imports/ui/body.html
@@ -4,8 +4,10 @@
     {{> header}}
     <main class="mdl-layout__content">
       <div class="mdl-layout__tab-panel is-active" id="overview">
+        <!-- The main grid starts here. -->
         <div class="section--center mdl-grid mdl-grid--no-spacing mdl-shadow--2dp">
           <div class="page-content">
+            {{> presentation}}
             {{> card}}
             {{> card}}
             {{> card}}
