--- a/imports/ui/blocks/header.html
+++ b/imports/ui/blocks/header.html
@@ -1,38 +1,33 @@
 <template name="header">
+	
+	<!-- Dropdown Structure -->
+	<ul id="dropdown1" class="dropdown-content">
+		<li><a href="#!">one</a></li>
+		<li><a href="#!">two</a></li>
+		<li class="divider"></li>
+		<li><a href="#!">three</a></li>
+	</ul>
 
-		<header class="mdl-layout__header">
-			<div class="mdl-layout__header-row">
-				<!-- Title -->
-				<span class="mdl-layout-title">{{title}}</span>
-				<!-- Add spacer, to align navigation to the right -->
-				<div class="mdl-layout-spacer"></div>
-				<!-- Navigation. We hide it in small screens. -->
-				<nav class="mdl-navigation mdl-layout--large-screen-only">
-					{{> links}}
-					{{> connect}}
-				</nav>
-			</div>
-		</header>
-    
-		<div class="mdl-layout__drawer">
-			<span class="mdl-layout-title">{{title}}</span>
-			<nav class="mdl-navigation">
-				{{> connect}}
-				{{> links}}
-			</nav>
+	<nav class="grey darken-3">
+		<div class="nav-wrapper">
+			<a href="#!" class="brand-logo">{{title}}</a>
+			<a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
+			<ul class="right hide-on-med-and-down">
+				<li><a href="sass.html">Sass</a></li>
+				<li><a href="badges.html">Components</a></li>
+				<li><a href="collapsible.html">Javascript</a></li>
+				<li><a href="mobile.html">Mobile</a></li>
+				<!-- Dropdown Trigger -->
+				<li><a class="dropdown-button" href="#!" data-activates="dropdown1">Dropdown<i class="material-icons right">arrow_drop_down</i></a></li>
+			</ul>
+			<ul class="side-nav" id="mobile-demo">
+				<li><a href="sass.html">Sass</a></li>
+				<li><a href="badges.html">Components</a></li>
+				<li><a href="collapsible.html">Javascript</a></li>
+				<li><a href="mobile.html">Mobile</a></li>
+				<li><a class="dropdown-button" href="#!" data-activates="dropdown1">Dropdown<i class="material-icons right">arrow_drop_down</i></a></li>
+			</ul>
 		</div>
+	</nav>
 
-</template>
-
-<template name="links">
-	<a class="mdl-navigation__link" href="#">Femme</a>
-	<a class="mdl-navigation__link" href="#">Homme</a>
-	<a class="mdl-navigation__link" href="#">Blog</a>
-	<a class="mdl-navigation__link" href="#">Créer ma garde robe</a>
-</template>
-
-<template name="connect">
-	<button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
-  	Connexion
-	</button>
 </template>
