--- a/imports/ui/blocks/footer.html
+++ b/imports/ui/blocks/footer.html
@@ -1,11 +1,37 @@
 <template name="footer">
-	<footer class="mdl-mini-footer">
-	  <div class="mdl-mini-footer__left-section">
-	    <div class="mdl-logo">Title</div>
-	    <ul class="mdl-mini-footer__link-list">
-	      <li><a href="#">Help</a></li>
-	      <li><a href="#">Privacy & Terms</a></li>
-	    </ul>
-	  </div>
-	</footer>
+  <footer class="page-footer grey">
+    <div class="container">
+      <div class="row">
+        <div class="col l6 s12">
+          <h5 class="white-text">A propos</h5>
+          <p class="grey-text text-lighten-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque id nunc nec volutpat.</p>
+
+
+        </div>
+        <div class="col l3 s12">
+          <h5 class="white-text">Titre</h5>
+          <ul>
+            <li><a class="white-text" href="#!">Lien 1</a></li>
+            <li><a class="white-text" href="#!">Lien 2</a></li>
+            <li><a class="white-text" href="#!">Lien 3</a></li>
+            <li><a class="white-text" href="#!">Lien 4</a></li>
+          </ul>
+        </div>
+        <div class="col l3 s12">
+          <h5 class="white-text">Titre</h5>
+          <ul>
+            <li><a class="white-text" href="#!">Lien 1</a></li>
+            <li><a class="white-text" href="#!">Lien 2</a></li>
+            <li><a class="white-text" href="#!">Lien 3</a></li>
+            <li><a class="white-text" href="#!">Lien 4</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="footer-copyright">
+      <div class="container">
+      Made by <a class="brown-text text-lighten-3" href="#">SYS Team</a>
+      </div>
+    </div>
+  </footer>
 </template>
