--- a/imports/ui/blocks/header.html
+++ b/imports/ui/blocks/header.html
@@ -13,21 +13,21 @@
 			<a href="#!" class="brand-logo">{{title}}</a>
 			<a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
 			<ul class="right hide-on-med-and-down">
-				<li><a href="sass.html">Sass</a></li>
-				<li><a href="badges.html">Components</a></li>
-				<li><a href="collapsible.html">Javascript</a></li>
-				<li><a href="mobile.html">Mobile</a></li>
-				<!-- Dropdown Trigger -->
-				<li><a class="dropdown-button" href="#!" data-activates="dropdown1">Dropdown<i class="material-icons right">arrow_drop_down</i></a></li>
+				{{> links}}
 			</ul>
 			<ul class="side-nav" id="mobile-demo">
-				<li><a href="sass.html">Sass</a></li>
-				<li><a href="badges.html">Components</a></li>
-				<li><a href="collapsible.html">Javascript</a></li>
-				<li><a href="mobile.html">Mobile</a></li>
-				<li><a class="dropdown-button" href="#!" data-activates="dropdown1">Dropdown<i class="material-icons right">arrow_drop_down</i></a></li>
+				{{> links}}
 			</ul>
 		</div>
 	</nav>
 
+</template>
+
+<template name="links">
+	<li><a href="sass.html">Femme</a></li>
+	<li><a href="badges.html">Homme</a></li>
+	<li><a href="collapsible.html">Créer mon dressing</a></li>
+	<li><a href="mobile.html">Blog</a></li>
+	<!-- Dropdown Trigger -->
+	<li><a class="dropdown-button" href="#!" data-activates="dropdown1">Connexion<i class="material-icons right">arrow_drop_down</i></a></li>
 </template>
