Ajout d'une card de test à la page d'accueil Ajout de polices et d'une image Réorganisation du code et style

--- a/imports/ui/blocks/card.html
+++ b/imports/ui/blocks/card.html
@@ -1,5 +1,13 @@
 <template name="card">
-
-
-
+	<div class="col s12 m3">
+		<div class="card small">
+			<div class="card-image">
+				<img src="images/wedding.jpg">
+				<span class="card-title">Mariage</span>
+			</div>
+			<div class="card-action">
+				<a href="!#" class="black-text">Parcourir</a>
+			</div>
+		</div>
+	</div>
 </template>
