--- a/imports/ui/blocks/footer.html
+++ b/imports/ui/blocks/footer.html
@@ -4,9 +4,9 @@
       <div class="row">
         <div class="col l6 s12">
           <h5 class="white-text">A propos</h5>
-          <p class="grey-text text-lighten-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque id nunc nec volutpat.</p>
-
-
+          <p class="grey-text text-lighten-4">
+          	Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque id nunc nec volutpat.
+          </p>
         </div>
         <div class="col l3 s12">
           <h5 class="white-text">Titre</h5>
