--- a/imports/ui/blocks/presentation.html
+++ b/imports/ui/blocks/presentation.html
@@ -1,14 +1,19 @@
 <template name="presentation">
-	<div class="presentation">
-		<!-- Textfield with Floating Label -->
-		<form action="#">
-			<div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-				<input class="mdl-textfield__input" type="text" id="sample3">
-				<label class="mdl-textfield__label" for="sample3">Ville ou région...</label>
+	<div id="index-banner" class="parallax-container">
+		<div class="section no-pad-bot">
+			<div class="container">
+				<br><br>
+				<h1 class="header center white-text">Un dressing connecté</h1>
+				<div class="row center">
+					<h5 class="header col s12 light">Recherchez des vêtements à louer dans la région</h5>
+				</div>
+				<div class="row center">
+					<a href="#" id="download-button" class="btn waves-effect waves-light grey darken-4">Rechercher</a>
+				</div>
+				<br><br>
+
 			</div>
-			<button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
-				Rechercher
-			</button>
-		</form>
+		</div>
+		<div class="parallax"><img src="/images/bigsky.jpg" alt="Unsplashed background img 1"></div>
 	</div>
 </template>
