--- a/imports/ui/body.html
+++ b/imports/ui/body.html
@@ -2,23 +2,7 @@
 
   {{> header}}
 
-  <div id="index-banner" class="parallax-container">
-    <div class="section no-pad-bot">
-      <div class="container">
-        <br><br>
-        <h1 class="header center white-text">Un dressing connecté</h1>
-        <div class="row center">
-          <h5 class="header col s12 light">Recherchez des vêtements à louer dans la région</h5>
-        </div>
-        <div class="row center">
-          <a href="#" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">Rechercher</a>
-        </div>
-        <br><br>
-
-      </div>
-    </div>
-    <div class="parallax"><img src="/images/bigsky.jpg" alt="Unsplashed background img 1"></div>
-  </div>
+  {{> presentation}}
 
 
   <div class="container">
@@ -61,9 +45,9 @@
   <div class="parallax-container valign-wrapper">
     <div class="section no-pad-bot">
       <div class="container">
-        <div class="row center">
-          <h5 class="header col s12 light">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque id nunc nec volutpat.</h5>
-        </div>
+
+          {{> card}}
+
       </div>
     </div>
     <div class="parallax"><img src="/images/clothes-large.jpg" alt="Unsplashed background img 2"></div>
