Rajout package Geocoder Réorganisation des blocks Mise sous forme de template du bloc d'infos, sous la présentation : blocks/infoBlock

--- a/imports/ui/body.html
+++ b/imports/ui/body.html
@@ -8,46 +8,17 @@
     <div class="section">
 
       <!--   Icon Section   -->
-      <div class="row">
-        <div class="col s12 m4">
-          <div class="icon-block">
-            <h2 class="center brown-text"><i class="material-icons">flash_on</i></h2>
-            <h5 class="center">Simple et rapide</h5>
-
-            <p class="light">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque id nunc nec volutpat. Etiam pellentesque tristique arcu, non consequat magna fermentum ac. Cras ut ultricies eros.</p>
-          </div>
-        </div>
-
-        <div class="col s12 m4">
-          <div class="icon-block">
-            <h2 class="center brown-text"><i class="material-icons">group</i></h2>
-            <h5 class="center">Communauté</h5>
-
-            <p class="light">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque id nunc nec volutpat. Etiam pellentesque tristique arcu, non consequat magna fermentum ac. Cras ut ultricies eros.</p>
-          </div>
-        </div>
-
-        <div class="col s12 m4">
-          <div class="icon-block">
-            <h2 class="center brown-text"><i class="material-icons">settings</i></h2>
-            <h5 class="center">Customisez</h5>
-
-            <p class="light">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque id nunc nec volutpat. Etiam pellentesque tristique arcu, non consequat magna fermentum ac. Cras ut ultricies eros.</p>
-          </div>
-        </div>
+      <div class="row info-block">
+        {{> infoBlock}}
       </div>
 
     </div>
   </div>
 
-
   <div class="parallax-container valign-wrapper">
-    <div class="section no-pad-bot">
-      <div class="container">
-
-          {{> card}}
-
-      </div>
+    <div class="row">
+      {{> themeBlock title="Mariage" img="/images/wedding.jpg"}}
+      {{> themeBlock title="Soirées à theme" img="/images/sky.jpg"}}
     </div>
     <div class="parallax"><img src="/images/clothes-large.jpg" alt="Unsplashed background img 2"></div>
   </div>
