--- a/imports/ui/blocks/header.html
+++ b/imports/ui/blocks/header.html
@@ -10,7 +10,7 @@
 
 	<nav class="grey darken-3">
 		<div class="nav-wrapper">
-			<a href="#!" class="brand-logo">{{title}}</a>
+			<a href="/" class="brand-logo">{{title}}</a>
 			<a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
 			<ul class="right hide-on-med-and-down">
 				{{> links}}
