--- a/imports/ui/pages/viewCloth.html
+++ b/imports/ui/pages/viewCloth.html
@@ -2,10 +2,9 @@
 <template name="viewCloth">
 	{{ getTradName }} : {{cloth.clothName}}<br/>
 	{{ getTradType }} : {{cloth.clothType}}<br/>
-	{{ getTradCategory }} : {{cloth.clothCategory}}<br/>
+	{{ getTradTheme }} : {{cloth.clothTheme}}<br/>
 	{{ getTradColor }} : {{cloth.clothColor}}<br/>
 	{{ getTradGender }} : {{cloth.clothGender}}<br/>
-	{{ getTradBrand }} : {{cloth.clothBrand}}<br/>
 	{{ getTradSize }} : {{cloth.clothSize}}<br/>
 	{{ getTradImages }} : {{cloth.clothImages}}<br/>
 	{{ getTradDescr }} : {{cloth.clothDescr}}<br/>
