--- a/imports/ui/pages/updateCloth.html
+++ b/imports/ui/pages/updateCloth.html
@@ -6,10 +6,9 @@
             <legend>{{ getUpdateLegend }}</legend>
             {{> afQuickField name='clothName'}}
             {{> afQuickField name='clothType'}}
-            {{> afQuickField name='clothCategory'}}
+            {{> afQuickField name='clothTheme'}}
             {{> afQuickField name='clothColor'}}
-            {{> afFormGroup name='clothGender'}}
-            {{> afQuickField name='clothBrand'}}
+            {{> afQuickField name='clothGender'}}
             {{> afQuickField name='clothSize'}}
             {{> afQuickField name='clothDescr' rows=6}}
             <button type="submit" class="btn btn-primary">{{ getSubmit }}</button>
