Nettoyage + fusion dressing et userProfile

--- a/imports/ui/pages/manageDressing.html
+++ b/imports/ui/pages/manageDressing.html
@@ -1,7 +1,7 @@
 <!--Created by Marc on 27/04/2016.-->
 <template name="manageDressing">
 	{{#if currentUser}}
-		<h1>{{dressing.dressingName}}</h1>
+		<h1>{{userProfile.dressingName}}</h1>
 		Mes vêtements :
 		<ul>
 			{{#each cloth}} 
