--- a/imports/ui/pages/newCloth.html
+++ b/imports/ui/pages/newCloth.html
@@ -1,4 +1,4 @@
-<!--Created by Marc on 29/04/2016.-->
+ <!--Created by Marc on 29/04/2016.-->
 <template name="newCloth">
 	{{#if currentUser}}
         {{# autoForm collection=Clothes id="newClothForm" type="insert"}}
@@ -19,3 +19,5 @@
         {{> accueil}}
     {{/if}}
 </template>
+
+ <!-- meteormethod="imageMethod" -->
