--- a/imports/ui/pages/userData.html
+++ b/imports/ui/pages/userData.html
@@ -4,7 +4,7 @@
         Sexe : {{userProfile.gender}}<br />
         T&eacute;l&eacute;phone : {{userProfile.phoneNumber}}<br />
         Adresse : {{userProfile.address.street}}, {{userProfile.address.postalCode}}, {{userProfile.address.city}} ({{userProfile.address.country}})<br />
-        Date de Naissance : {{userProfile.birthdate}}<br />
+        Date de Naissance : {{getBirthdate}}<br />
         A propos de vous : {{userProfile.bio}}
     {{/if}}
     <br/>
