--- a/imports/ui/blocks/header.html
+++ b/imports/ui/blocks/header.html
@@ -24,10 +24,9 @@
 </template>
 
 <template name="links">
+	<li>{{> loginButtons}}</li>
 	<li><a href="sass.html">Femme</a></li>
 	<li><a href="badges.html">Homme</a></li>
-	<li><a href="collapsible.html">Créer mon dressing</a></li>
+	<li><a href="/dressing">Gérer mon dressing</a></li>
 	<li><a href="mobile.html">Blog</a></li>
-	<!-- Dropdown Trigger -->
-	<li><a class="dropdown-button" href="#!" data-activates="dropdown1">Connexion<i class="material-icons right">arrow_drop_down</i></a></li>
 </template>
