--- a/client/main.html
+++ b/client/main.html
@@ -1,7 +1,6 @@
-<head>
-
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
-  <title>Swap Your Style</title>
-
-</head>
+<body>
+  <head>
+    <title>Swap Your Style</title>
+    <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  </head>
+</body>
