Mise à jour : Meteor (1.3.4.4) et packages Mise à jour de la configuration de useraccounts:core : un username est requis à l'inscription Rajout d'un bouton de connexion/déconnexion automatique dans le header Mise à jours de templates associés à /profile et /dressing

--- a/imports/ui/pages/dressing-page.html
+++ b/imports/ui/pages/dressing-page.html
@@ -2,7 +2,7 @@
   <!-- FIXME : denying access should be handled in routes -->
   {{#if currentUser}}	
 	<div class="container">
-		<h3>Dressing de {{currentUser.emails.[0].address}}</h3>
+		<h3>Dressing de {{currentUser.username}}</h3>
 		<br>
 		<a class="btn btn-primary" href="/new">Nouveau vêtement</a>
 		<!-- TODO : add templates for clothes and items generation logic -->
