--- a/imports/ui/homepage/header.html
+++ b/imports/ui/homepage/header.html
@@ -5,10 +5,8 @@
       <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
       <ul class="right hide-on-med-and-down">
         {{> links}}
-        <!-- {{> login_button}} -->
       </ul>
       <ul class="side-nav" id="mobile-demo">
-        <!-- {{> login_button}} -->
         {{> links}}
       </ul>
     </div>
@@ -16,20 +14,24 @@
 </template>
 
 <template name="links">
-<!--   <li><a href="{{pathFor 'signin'}}">Sign In</a></li>
-  <li><a href="{{pathFor 'join'}}">Join</a></li> -->
   <li><a href="/women">Femme</a></li>
   <li><a href="/men">Homme</a></li>
   <li><a href="/dressing">Créer mon dressing</a></li>
   <li><a href="/blog">Blog</a></li>
-  {{#if currentUser}}
+  <!-- Reactive useraccounts sign-in/logout button -->
+  <li>{{> atNavButton}}</li>
+<!--   {{#if currentUser}}
     <li><a href="/profile">
-      {{currentUser.emails.[0].address}}
+      {{#if currentUser.username}}
+        {{currentUser.username}}
+      {{else}}
+        {{currentUser.emails.[0].address}}
+      {{/if}}
     </a></li>
   {{else}}
     <li><a href="/signin">Connexion</a></li>
     <li><a href="/join">Inscription</a></li>
-  {{/if}}
+  {{/if}} -->
 </template>
 
 <template name="login_button">
