--- a/imports/ui/pages/home-page.html
+++ b/imports/ui/pages/home-page.html
@@ -3,6 +3,7 @@
   {{> Presentation}}
 
   <div class="container">
+    Localisation : {{getAddress}}<br/>
     <div class="section">
 
       <!--   Icon Section   -->
