--- a/imports/ui/homepage/header.html
+++ b/imports/ui/homepage/header.html
@@ -17,6 +17,7 @@
   <li><a href="/women">Femme</a></li>
   <li><a href="/men">Homme</a></li>
   <li><a href="/dressing">Créer mon dressing</a></li>
+  <li><a href="/editInfo">Mon Compte</a></li>
   <li><a href="/blog">Blog</a></li>
   <!-- Reactive useraccounts sign-in/logout button -->
   <li>{{> atNavButton}}</li>
