--- a/imports/ui/pages/home-page.html
+++ b/imports/ui/pages/home-page.html
@@ -4,6 +4,7 @@
 
   <div class="container">
     Localisation : {{getAddress}}<br/>
+    {{> userData}}
     <div class="section">
 
       <!--   Icon Section   -->
