--- a/imports/ui/pages/clothes-add-page.html
+++ b/imports/ui/pages/clothes-add-page.html
@@ -2,7 +2,7 @@
 <template name="Clothes_add_page">
     <div class="container">
       <div class="card">
-      {{# autoForm collection=Clothes id="insertClothForm" type="insert"}}
+      {{# autoForm collection=clothes id="insertClothForm" type="insert"}}
         <fieldset>
           <legend>{{ getUpdateLegend }}</legend>
           {{> afQuickField name='clothName'}}
@@ -12,7 +12,7 @@
           {{> afQuickField name='clothGender'}}
           {{> afQuickField name='clothSize'}}
           {{> afQuickField name='clothDescr' rows=6}}
-          <!-- {{#if currentUpload}}
+          {{#if currentUpload}}
             {{#with currentUpload}}
               <div class="file-field input-field">
                 Uploading <b>{{file.name}}</b> : 
@@ -27,7 +27,7 @@
               </div>
             </div>
             <br/><br/><br/>
-          {{/if}} -->
+          {{/if}}
           <button type="submit" class="btn btn-primary">{{ getSubmit }}</button>
           <button type="reset" class="btn btn-default">{{ getReset }}</button>
         </fieldset>
