--- a/imports/ui/pages/userInfos-edit-page.html
+++ b/imports/ui/pages/userInfos-edit-page.html
@@ -5,7 +5,7 @@
         {{> afQuickField name='firstName'}}
         {{> afQuickField name='lastName'}}
         {{> afQuickField name='birthdate'}}
-        {{> afFormGroup name='gender'}}
+        {{> afQuickField name='gender'}}
         {{> afQuickField name='bio' rows=6}}
         {{> afQuickField name='phoneNumber'}}
         <legend>{{ getTradAddress }}</legend>
