Ajout images aux vêtements (stockés sur imgur)

--- a/imports/ui/pages/clothes-edit-page.html
+++ b/imports/ui/pages/clothes-edit-page.html
@@ -11,6 +11,7 @@
             {{> afQuickField name='clothGender'}}
             {{> afQuickField name='clothSize'}}
             {{> afQuickField name='clothDescr' rows=6}}
+            {{> afFieldInput disabled=waitingForApiResponse name='clothImage' type='file' id='fileInput'}}
             <button type="submit" class="btn btn-primary">{{ getSubmit }}</button>
             <button type="reset" class="btn btn-default">{{ getReset }}</button>
         </fieldset>
