--- a/imports/ui/pages/clothes-add-page.html
+++ b/imports/ui/pages/clothes-add-page.html
@@ -12,23 +12,8 @@
           {{> afQuickField name='clothGender'}}
           {{> afQuickField name='clothSize'}}
           {{> afQuickField name='clothDescr' rows=6}}
-          {{#if currentUpload}}
-            {{#with currentUpload}}
-              <div class="file-field input-field">
-                Uploading <b>{{file.name}}</b> : 
-                <span id="progress">{{progress}} %</span>
-              </div>
-            {{/with}}
-          {{else}}
-            <div class="file-field input-field">
-              <div class="btn">
-                <span id="progress">Upload</span>
-                <input id="fileInput" type="file" /><br/>
-              </div>
-            </div>
-            <br/><br/><br/>
-          {{/if}}
-          <button type="submit" class="btn btn-primary">{{ getSubmit }}</button>
+          {{> afFieldInput disabled=waitingForApiResponse name='clothImage' type='file' id='fileInput'}}<br/><br/>
+          <button type="submit" disabled={{waitingForApiResponse}} class="btn btn-primary">{{ getSubmit }}</button>
           <button type="reset" class="btn btn-default">{{ getReset }}</button>
         </fieldset>
       {{/autoForm}}
