--- a/imports/ui/pages/search.html
+++ b/imports/ui/pages/search.html
@@ -5,10 +5,11 @@
 		<li class="collection-header"><h4>{{ getTradClothes }}</h4></li>
 		{{#each cloth}} 
 			<li class="collection-item avatar">
-		      <img src="images/{{getImage}}" alt="" class="circle">
+		      <a href="/viewCloth/{{_id}}">
+		      <img src={{getThumbnail(getClothImage(clothImage))}} alt="" class="circle">
 		      <span class="title">{{clothName}}</span>
 		      <p>{{clothDescr}}</p>
-		      <a href="/viewCloth/{{_id}}" class="secondary-content"><i class="material-icons">send</i></a>
+		      <i class="material-icons">send</i></a>
 		    </li>
 		{{/each}}
 		</ul>
