--- a/imports/ui/pages/userInfos-edit-page.html
+++ b/imports/ui/pages/userInfos-edit-page.html
@@ -1,4 +1,5 @@
 <template name="userInfos_edit_page">
+  <div class="container">
     {{# autoForm collection=userInfos id="updateProfileForm" doc=selfProf type="update"}}
     <fieldset>
         <legend>{{ getUpdateLegend }}</legend>
@@ -17,4 +18,5 @@
         <button type="reset" class="btn btn-default">{{ getReset }}</button>
     </fieldset>
     {{/autoForm}}
+    </div>
 </template>
