--- a/imports/ui/pages/clothes-add-page.html
+++ b/imports/ui/pages/clothes-add-page.html
@@ -1,22 +1,34 @@
 <!-- Created by Marc on 29/04/2016. -->
 <template name="Clothes_add_page">
-    <div class="container">
-      <div class="card">
-      {{# autoForm collection=clothes id="insertClothForm" type="insert"}}
-        <fieldset>
-          <legend>{{ getUpdateLegend }}</legend>
-          {{> afQuickField name='clothName'}}
-          {{> afQuickField name='clothType'}}
-          {{> afQuickField name='clothTheme'}}
-          {{> afQuickField name='clothColor'}}
-          {{> afQuickField name='clothGender'}}
-          {{> afQuickField name='clothSize'}}
-          {{> afQuickField name='clothDescr' rows=6}}
-          {{> afFieldInput disabled=waitingForApiResponse name='clothImage' type='file' id='fileInput'}}<br/><br/>
-          <button type="submit" disabled={{waitingForApiResponse}} class="btn btn-primary">{{ getSubmit }}</button>
-          <button type="reset" class="btn btn-default">{{ getReset }}</button>
-        </fieldset>
-      {{/autoForm}}
-      </div>
+  <div class="container">
+    <div class="card">
+    {{# autoForm collection=clothes id="insertClothForm" type="insert"}}
+      <fieldset>
+        <legend>{{ getUpdateLegend }}</legend>
+        {{> afQuickField name='clothName'}}
+        {{> afQuickField name='clothType'}}
+        {{> afQuickField name='clothTheme'}}
+        {{> afQuickField name='clothColor'}}
+        {{> afQuickField name='clothGender'}}
+        {{> afQuickField name='clothSize'}}
+        {{> afQuickField name='clothDescr' rows=6}}
+        <p class="range-field">
+          {{> afQuickField name="clothPrice"}}
+        </p>
+        {{> afQuickField name='disponibility'}}
+        <div class="file-field input-field">
+          <div class="btn">
+            <span>File</span>
+            {{> afFieldInput disabled=waitingForApiResponse name='clothImage' type='file' id='fileInput'}}
+          </div>
+          <div class="file-path-wrapper">
+            <input class="file-path validate" type="text" placeholder="Upload one file">
+          </div>
+        </div>
+        <button type="submit" disabled={{waitingForApiResponse}} class="btn btn-primary">{{ getSubmit }}</button>
+        <button type="reset" class="btn btn-default">{{ getReset }}</button>
+      </fieldset>
+    {{/autoForm}}
     </div>
+  </div>
 </template>
