--- a/imports/ui/pages/search.html
+++ b/imports/ui/pages/search.html
@@ -1,7 +1,7 @@
 <!--Created by Marc on 20/06/2016.-->
 <template name="search">
 	<div class="container">
-		{{#each paramSelect}}
+		<!-- {{#each paramSelect}}
 			<div class="input-field col s12">
 				{{selectName}}
 				<select style="display: list-item;">
@@ -10,18 +10,11 @@
 					{{/each}}
 				</select>
 			</div>
+		{{/each}} -->
+		<div class="row">
+		{{#each cloth in Clothes}}
+			{{> Clothes_item cloth=cloth}}
 		{{/each}}
-	<ul class="collection with-header">
-		<li class="collection-header"><h4>{{ getTradClothes }}</h4></li>
-		{{#each cloth}}
-			<li class="collection-item avatar">
-		      <a href="/viewCloth/{{_id}}">
-		      <img src={{getThumbnail(getClothImage(clothImage))}} alt="" class="circle">
-		      <span class="title">{{clothName}}</span>
-		      <p>{{clothDescr}}</p>
-		      <i class="material-icons">send</i></a>
-		    </li>
-		{{/each}}
-	</ul>
+		</div>
 	</div>
 </template>
