Added dropdown menus to search

--- a/imports/ui/homepage/footer.html
+++ b/imports/ui/homepage/footer.html
@@ -37,7 +37,7 @@
     </div>
     <div class="footer-copyright">
       <div class="container">
-      Made by <a class="brown-text text-darken-3" href="#">The SwapYourStyle Team</a>
+      Made by <a class="brown-text text-darken-3" href="#">The SwapMyStyle Team</a>
       </div>
     </div>
   </footer>
