Added search function by cloth parameter, updated clothes-item, readded the functionnality to rename dressing

--- a/imports/ui/pages/dressing-page.html
+++ b/imports/ui/pages/dressing-page.html
@@ -1,7 +1,7 @@
 <template name="Dressing_page">
 	<div class="container dressing">
 		<div class="dressing-header">
-			<h2>Mon dressing</h2>
+			<h2>{{ getDressingName }}</h2>
 			<a class="btn grey darken-3" href="/new">Nouveau vêtement</a>
 			<a class="btn grey darken-3" href="/updateDressing">Modifier le Dressing</a>
 		</div>
