--- a/imports/ui/pages/updateDressing.html
+++ b/imports/ui/pages/updateDressing.html
@@ -1,15 +1,11 @@
 <!--Created by Marc on 12/06/2016.-->
 <template name="updateDressing">
-	{{#if currentUser}}
-        {{# autoForm collection=userProfile doc=selfProfile id="updateDressingForm" type="update"}}
-        <fieldset>
-            <legend>{{ getUpdateLegend }}</legend>
-            {{> afQuickField name='dressingName'}}
-            <button type="submit" class="btn btn-primary">{{ getSubmit }}</button>
-            <button type="reset" class="btn btn-default">{{ getReset }}</button>
-        </fieldset>
-        {{/autoForm}}
-    {{else}}
-        {{> accueil}}
-    {{/if}}
+    {{# autoForm collection=userInfos doc=selfProfile id="updateDressingForm" type="update"}}
+    <fieldset>
+        <legend>{{ getUpdateLegend }}</legend>
+        {{> afQuickField name='dressingName'}}
+        <button type="submit" class="btn btn-primary">{{ getSubmit }}</button>
+        <button type="reset" class="btn btn-default">{{ getReset }}</button>
+    </fieldset>
+    {{/autoForm}}
 </template>
