--- a/imports/ui/pages/viewCloth.html
+++ b/imports/ui/pages/viewCloth.html
@@ -6,6 +6,6 @@
 	{{ getTradColor }} : {{cloth.clothColor}}<br/>
 	{{ getTradGender }} : {{cloth.clothGender}}<br/>
 	{{ getTradSize }} : {{cloth.clothSize}}<br/>
-	{{ getTradImages }} : <img src={{getThumbnail(getClothImage(cloth.clothImage))}}><br/>
+	{{ getTradImage }} : <img src={{getThumbnail(getClothImage(cloth.clothImage))}}><br/>
 	{{ getTradDescr }} : {{cloth.clothDescr}}<br/>
 </template>
