--- a/imports/ui/pages/search.html
+++ b/imports/ui/pages/search.html
@@ -6,7 +6,7 @@
 		{{/each}}
 		<h1>{{ getTradClothes }}</h1>
 		<div class="row">
-		{{#each cloth in Clothes}}
+		{{#each cloth in clothes}}
 			{{> Clothes_item cloth=cloth}}
 		{{/each}}
 		</div>
