--- a/imports/ui/pages/clothes-edit-page.html
+++ b/imports/ui/pages/clothes-edit-page.html
@@ -1,36 +1,35 @@
 <!--Created by Marc on 29/04/2016.-->
 <template name="Clothes_edit_page">
-    <div class="container">
-        <div class="card">
-            {{# autoForm collection=Clothes doc=clothProfile id="updateClothForm" type="update"}}
-                <fieldset>
-                    <legend>{{ getUpdateLegend }}</legend>
-                    {{> afQuickField name='clothName'}}
-                    {{> afQuickField name='clothType'}}
-                    {{> afQuickField name='clothTheme'}}
-                    {{> afQuickField name='clothColor'}}
-                    {{> afQuickField name='clothGender'}}
-                    {{> afQuickField name='clothSize'}}
-                    {{> afQuickField name='clothDescr' rows=6}}
-                    <p class="range-field">
-                        {{> afQuickField name="clothPrice"}}
-                    </p>
-                    {{> afQuickField name='disponibility'}}
-                    {{#if imageEmpty}}
-                    <div class="file-field input-field">
-                      <div class="btn">
-                        <span>File</span>
-                        {{> afFieldInput disabled=waitingForApiResponse name='clothImage' type='file' id='fileInput'}}
-                      </div>
-                      <div class="file-path-wrapper">
-                        <input class="file-path validate" type="text" placeholder="Upload one file">
-                      </div>
-                    </div>
-                    {{/if}}
-                    <button type="submit" disabled={{waitingForApiResponse}} class="btn btn-primary">{{ getSubmit }}</button>
-                    <button type="reset" class="btn btn-default">{{ getReset }}</button>
-                </fieldset>
-            {{/autoForm}}
+  <div class="container">
+    <div class="card">
+      {{# autoForm collection=clothes doc=clothProfile
+      id="updateClothForm" type="update"}}
+      <fieldset>
+        <legend>{{ getUpdateLegend }}</legend>
+        {{> afQuickField name='name'}}
+        {{> afQuickField name='type'}}
+        {{> afQuickField name='theme'}}
+        {{> afQuickField name='color'}}
+        {{> afQuickField name='gender'}}
+        {{> afQuickField name='size'}}
+        {{> afQuickField name='description' rows=6}}
+        <p class="range-field">
+          {{> afQuickField name="price"}}
+        </p>
+        {{> afQuickField name='disponibility'}}
+        <div class="file-field input-field">
+          <div class="btn">
+            <span>File</span>
+            {{> afFieldInput disabled=waitingForApiResponse name='image' type='file' id='fileInput'}}
+          </div>
+          <div class="file-path-wrapper">
+            <input class="file-path validate" type="text" placeholder="Upload one file">
+          </div>
         </div>
+        <button type="submit" disabled={{waitingForApiResponse}} class="btn btn-primary">{{ getSubmit }}</button>
+        <button type="reset" class="btn btn-default">{{ getReset }}</button>
+      </fieldset>
+    {{/autoForm}}
     </div>
+  </div>
 </template>
