added the datePicker function for location

--- a/imports/ui/pages/clothes-add-page.html
+++ b/imports/ui/pages/clothes-add-page.html
@@ -15,7 +15,7 @@
         <p class="range-field">
           {{> afQuickField name="clothPrice"}}
         </p>
-        {{> afQuickField name='disponibility'}}
+        <div id="multidatespicker"></div>
         <div class="file-field input-field">
           <div class="btn">
             <span>File</span>
