--- a/imports/ui/pages/clothes-edit-page.html
+++ b/imports/ui/pages/clothes-edit-page.html
@@ -15,7 +15,7 @@
                     <p class="range-field">
                         {{> afQuickField name="clothPrice"}}
                     </p>
-                    {{> afQuickField name='disponibility'}}
+                    <div id="multidatespicker"></div>
                     {{#if imageEmpty}}
                     <div class="file-field input-field">
                       <div class="btn">
