[Version de travail] - Ne pas pull Refonte du formulaire d'ajout de vêtements : -Sliders réactifs, ajout de l'ownerId et validations automatiques -Reste à ajouter : upload d'image & coordonnées gps Mise à jour et ajout de divers packages notamment : -VelocityJs pour les animations/transitions -autoform-nouislider pour les sliders Diverses corrections sur toute les pages de l'application --------- A venir : Refonte du composant cloth-item, de l'accueil et du profil

--- a/imports/ui/homepage/header.html
+++ b/imports/ui/homepage/header.html
@@ -1,5 +1,5 @@
 <template name="Header">
-  <nav class="grey darken-3">
+  <nav class="top-menu">
     <div class="nav-wrapper">
       <a href="/" class="brand-logo">{{title}}</a>
       <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
@@ -17,8 +17,12 @@
   <li><a href="/women">Femme</a></li>
   <li><a href="/men">Homme</a></li>
   <li><a href="/dressing">{{dressing_label}}</a></li>
-  <li><a href="/editInfo">Mon Compte</a></li>
+  <li><a href="/account">Mon Compte</a></li>
   <li><a href="/blog">Blog</a></li>
-  <!-- Reactive useraccounts sign-in/logout button -->
-  <li>{{> atNavButton}}</li>
+  {{#if currentUser}}
+    <li><a href="/profile">{{currentUser.username}}</a></li>
+  {{else}}
+    <!-- Reactive useraccounts sign-in/logout button -->
+    <li>{{> atNavButton}}</li>
+  {{/if}}
 </template>
