--- a/client/main.html
+++ b/client/main.html
@@ -2,5 +2,6 @@
   <head>
     <title>Swap Your Style</title>
     <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
 </body>
