--- a/imports/ui/homepage/presentation.html
+++ b/imports/ui/homepage/presentation.html
@@ -8,7 +8,7 @@
 					<h5 class="header col s12 light">Recherchez des vêtements à louer dans la région</h5>
 				</div>
 				<div class="row center">
-					<a href="/search" id="search-button" class="btn waves-effect waves-light grey darken-4">Rechercher</a>
+					<a href="/search" id="search-button" class="btn waves-effect waves-light">Rechercher</a>
 				</div>
 				<br><br>
 
