--- a/imports/ui/pages/clothes-add-page.html
+++ b/imports/ui/pages/clothes-add-page.html
@@ -1,35 +1,73 @@
 <!-- Created by Marc on 29/04/2016. -->
 <template name="Clothes_add_page">
-  <div class="container">
-    <div class="card">
+  <div class="row">
+  <div class="col s12">
+  <div class="container add-cloth-form">
+  <h3 class="header">Ajoutez un nouveau vêtement</h3>
       {{# autoForm collection=clothes 
       id="insertClothForm" type="insert"}}
-      <fieldset>
-        <legend>{{ getUpdateLegend }}</legend>
-        {{> afQuickField name='name'}}
-        {{> afQuickField name='type'}}
-        {{> afQuickField name='theme'}}
-        {{> afQuickField name='color'}}
-        {{> afQuickField name='gender'}}
-        {{> afQuickField name='size'}}
-        {{> afQuickField name='description' rows=6}}
-        <p class="range-field">
-          {{> afQuickField name="price"}}
-        </p>
-        {{> afQuickField name='disponibility'}}
-        <div class="file-field input-field">
-          <div class="btn">
-            <span>File</span>
-            {{> afFieldInput disabled=waitingForApiResponse name='image' type='file' id='fileInput'}}
-          </div>
-          <div class="file-path-wrapper">
-            <input class="file-path validate" type="text" placeholder="Upload one file">
+      <fieldset class="card">
+        {{> afQuickField name="name" 
+        placeholder="Exemple : Une jolie robe"}}
+        {{> afQuickField name="type"}}
+        {{> afQuickField name="theme"}}
+        {{> afQuickField name="color"}}
+        {{> afQuickField name="gender"}}
+        <div class="switch-size">
+          {{> afQuickField name="allowSize"}}
+        </div>
+        {{#if afFieldValueIs name="allowSize" value=true}}
+          <div class="size-value">{{currentSize}}</div>
+          {{> size_slider}}
+        {{/if}}
+        {{> price_slider}}
+        <div class="price-wrapper">
+          <div class="price green btn-large">
+            <span class="white-text thin">{{currentPrice}}€/j</span>
           </div>
         </div>
-        <button type="submit" disabled={{waitingForApiResponse}} class="btn btn-primary">{{ getSubmit }}</button>
-        <button type="reset" class="btn btn-default">{{ getReset }}</button>
+        {{> afQuickField name="description" 
+        placeholder="Exemple : Une robe parfaite pour les soirées !" 
+        rows=6}}
+<!--    <div class="file-field">
+          <button class="btn grey darken-3">
+            <span>Image</span>
+            {{> afFieldInput disabled=waitingForApiResponse 
+            name='image' type='file' id='fileInput'}}
+          </button>
+          <div class="file-path-wrapper">
+            <input class="file-path validate" type="text" 
+            placeholder="(Ajoutez une image)">
+          </div>
+        </div> -->
+        <div class="form-group form-buttons">
+          <button type="submit" 
+          class="btn add-btn grey darken-3">Ajouter</button>
+          <button type="reset" 
+          class="btn reset-btn grey darken-1">Réinitialiser</button>
+        </div>
       </fieldset>
-    {{/autoForm}}
+      {{/autoForm}}
+  </div>
+  </div>
+  </div>
+</template>
+
+<template name="size_slider">
+  <div class="form-group size-slider">
+    <div class="form-control size-control">
+      {{> afFieldInput id="sizeSlider"
+      name="size" type="noUiSlider"}}
+    </div>
+  </div>
+</template>
+
+<template name="price_slider">
+  <div class="form-group price-slider">
+    <label class="control-label price-label">Prix</label>
+    <div class="form-control price-control">
+      {{> afFieldInput id="priceSlider"
+      name="price" type="noUiSlider"}}
     </div>
   </div>
 </template>
