Corrections sur le formulaire d'ajout de vêtement : -Le bouton reset réinitialise maintenant correctement les valeurs et les sliders Style et corrections générales Tests d'animations des pages avec VelocityJs

--- a/imports/ui/pages/search-page.html
+++ b/imports/ui/pages/search-page.html
@@ -1,14 +1,14 @@
 <!--Created by Marc on 20/06/2016.-->
-<template name="search">
+<template name="Search_page">
 	<div class="container">
-		{{#each navItems}}
+<!-- 		{{#each navItems}}
 			{{> Template.dynamic template=this}}
 		{{/each}}
-		<h1>{{ getTradClothes }}</h1>
+		<h1>{{ getTradClothes }}</h1> -->
 		<div class="row">
-		{{#each cloth in clothes}}
+<!-- 		{{#each cloth in clothes}}
 			{{> Clothes_item cloth=cloth}}
-		{{/each}}
+		{{/each}} -->
 		</div>
 	</div>
 </template>
