Meilleures publications : rajout publication spécifique pour dressing.js (vêtements personnels uniquement) Style général (couleur des boutons dans la vue dressing-page)

--- a/imports/ui/pages/dressing-page.html
+++ b/imports/ui/pages/dressing-page.html
@@ -9,8 +9,8 @@
 					Mon dressing
 				{{/if}}
 			</h2>
-			<a class="btn grey darken-3" href="/new">Nouveau vêtement</a>
-			<a class="btn grey darken-3" href="/updateDressing">Modifier le Dressing</a>
+			<a class="btn new-cloth-btn" href="/new">Nouveau vêtement</a>
+			<a class="btn edit-dressing-btn" href="/updateDressing">Modifier le Dressing</a>
 		</div>
 		<br>
 		<div class="row">
