Mises à jour : Meteor 1.4.1 & node-bcrypt Corrections de détail d'affichage + style

--- a/imports/ui/pages/search-page.html
+++ b/imports/ui/pages/search-page.html
@@ -6,9 +6,10 @@
 		{{/each}}
 		<h1>{{ getTradClothes }}</h1> -->
 		<div class="row">
-<!-- 		{{#each cloth in clothes}}
+		<h1>Vêtements disponibles</h1>
+	 	{{#each cloth in clothes}}
 			{{> Clothes_item cloth=cloth}}
-		{{/each}} -->
+		{{/each}}
 		</div>
 	</div>
 </template>
